--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,2 +1,14 @@
-version: 2.0
+version: 2.1
+
+jobs:
+  saluda:
+    docker:
+      - image: cimg/base:stable
+    steps:
+      - run: echo hola
+
+workflows:
+  hello:
+    jobs:
+      - saluda
 
