--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,9 +6,17 @@ jobs:
       - image: cimg/base:stable
     steps:
       - run: echo hola
+  despidete:
+    docker:
+      - image: cimage/base:stable
+    steps:
+    - run echo pre adios
+    - run echo pre adios
+    - run echo post adios
 
 workflows:
   hello:
     jobs:
       - saluda
+      - despidete
 
