--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,9 +10,9 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      - run echo pre adios
-      - run echo pre adios
-      - run echo post adios
+      - run: echo pre adios
+      - run: echo pre adios
+      - run: echo post adios
 
 workflows:
   hello:
