--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,13 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      - run: hola
+      - run: echio hola
   despidete:
     docker:
       - image: cimg/base:stable
     steps:
       - run: echo pre adios
-      - run: echo pre adios
+      - run: echo adios
       - run: echo post adios
 
 workflows:
