--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     docker:
       - image: cimg/base:stable
     steps:
-      - run: echio hola
+      - run: echo hola
   despidete:
     docker:
       - image: cimg/base:stable
